--- a/my-spa/package.json
+++ b/my-spa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-third-app",
+  "name": "my-spa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
     "formik": "^1.5.2",
